test/expected/unterminated_quote_in_the_middle.out
shit: 1:6: error: Unterminated string literal.
     1 |  first"second
       |       ^~~~~~~ here.
shit: 1:13: note:
     1 |  first"second
       |              ^~ Expected " here.
